--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <a href="pricing.html">pricing</a>
         <a href="trainers.html">trainers</a>
         <a href="blogs.html">blogs</a>
-        <a href="signin.html">signin</a>
-        <a href="signup.html">signup</a>
+        <!-- <a href="signin.html">signin</a>
+        <a href="signup.html">signup</a> -->
     </nav>
 
 </header>
