--- a/trainers.html
+++ b/trainers.html
@@ -30,8 +30,8 @@
             <a href="pricing.html">pricing</a>
             <a href="trainers.html">trainers</a>
             <a href="blogs.html">blogs</a>
-            <a class="links" href="signin.html">SignIn</a>
-            <a class="links" href="signup.html">Signup</a>
+            <!-- <a class="links" href="signin.html">SignIn</a>
+            <a class="links" href="signup.html">Signup</a> -->
         </nav>
     
     </header>
